--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hostuuid (1.1) unstable; urgency=low
+
+  * Removed debug output.
+
+ -- Richard Hartmann <richih.mailinglist@gmail.com>  Tue, 17 Nov 2009 22:52:14 +0100
+
 hostuuid (1.0) unstable; urgency=low
 
   * Initial release.
