--- a/debian/po/templates.pot
+++ b/debian/po/templates.pot
@@ -1,4 +1,4 @@
-# templates.pot for hostuuid
+# hostuuid - program to create, display, check /etc/hostuuid.
 # Copyright (C) 2009
 # This file is distributed under the same license as the hostuuid package.
 # RICHARD HARTMANN <richih.mailinglist@gmail.com>, 2009.
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.2\n"
 "Report-Msgid-Bugs-To: hostuuid@packages.debian.org\n"
-"POT-Creation-Date: 2009-11-21 15:17+0100\n"
-"PO-Revision-Date: 2009-11-21 15:17+0100\n"
+"POT-Creation-Date: 2009-11-27 14:05+0100\n"
+"PO-Revision-Date: 2009-11-27 14:05+0100\n"
 "Last-Translator: RICHARD HARTMANN <richih.mailinglist@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -19,7 +19,7 @@ msgstr ""
 #. Type: string
 #. Description
 #: ../templates:1001
-msgid "Enter UUID"
+msgid "UUID:"
 msgstr ""
 
 #. Type: string
